versions/v3.6.0/doxygen/html/globals_eval_c.md
---
version: v3.6.0
source_url: https://raw.githubusercontent.com/zephyrproject-rtos/zephyr/3.6.0/doc/doxygen/html/globals_eval_c.html
original_path: doxygen/html/globals_eval_c.html
---

| Logo | Zephyr API Documentation  3.6.0  A Scalable Open Source RTOS |
| --- | --- |

Loading...

Searching...

No Matches

Here is a list of all enum values with links to the files they belong to:

### - c -

- CAN\_MCAN\_PSR\_LEC\_ACK\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462a9e5414792478db5f57f1f270d0ceac13)
- CAN\_MCAN\_PSR\_LEC\_BIT0\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462a4bca141d0a3056cbdfc379f49d60c651)
- CAN\_MCAN\_PSR\_LEC\_BIT1\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462a7de1a2f2ced1a52f01ee4d9f2b9b6b80)
- CAN\_MCAN\_PSR\_LEC\_CRC\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462a7a19af0809a0613a8becb016781b03dc)
- CAN\_MCAN\_PSR\_LEC\_FORM\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462ac4bce840b2edcf97957d74e6debe9b03)
- CAN\_MCAN\_PSR\_LEC\_NO\_CHANGE : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462a683c68657e49efd306f43be43bd3167e)
- CAN\_MCAN\_PSR\_LEC\_NO\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462acab41a3d432b309d9b73a711d84b39e9)
- CAN\_MCAN\_PSR\_LEC\_STUFF\_ERROR : [can\_mcan.h](can__mcan_8h.md#a888671da33c3ffc35ce94c8eba13d462a0207d3347a4afc89d17fa6b954ae90d0)
- CAN\_RAW\_FILTER : [socketcan.h](group__socket__can.md#gga0878a39c728876bf39637e284a5b132ba1650b3e04298c36834ffa7dca117443a)
- CAN\_STATE\_BUS\_OFF : [can.h](group__can__interface.md#ggac7ec472c26c564dd7067c49f67c8d2f7a679935a8710667fcb99423d217cd9959)
- CAN\_STATE\_ERROR\_ACTIVE : [can.h](group__can__interface.md#ggac7ec472c26c564dd7067c49f67c8d2f7a026154ef3a7f9cb633e43ab7e63d769c)
- CAN\_STATE\_ERROR\_PASSIVE : [can.h](group__can__interface.md#ggac7ec472c26c564dd7067c49f67c8d2f7ac2cd08cde738273c5e5df8306c48d8ae)
- CAN\_STATE\_ERROR\_WARNING : [can.h](group__can__interface.md#ggac7ec472c26c564dd7067c49f67c8d2f7a15263a89961afbc4e813c7ccfc59e5ff)
- CAN\_STATE\_STOPPED : [can.h](group__can__interface.md#ggac7ec472c26c564dd7067c49f67c8d2f7a644e7a441f2e607b93528d3128508cc8)
- CARD\_COMBO : [sd.h](sd_8h.md#aee707e2ff5691dbdefd9341a18de7b14ad527710e81e76e0938689015c2013090)
- CARD\_ERROR : [sd.h](sd_8h.md#a52167aac735d93085a5eebc6f50e1bbaa5458e6fab05f8c1afbe7d191eb489e5e)
- CARD\_INITIALIZED : [sd.h](sd_8h.md#a52167aac735d93085a5eebc6f50e1bbaa839d17bb0bee41a125a617683bce17c9)
- CARD\_MMC : [sd.h](sd_8h.md#aee707e2ff5691dbdefd9341a18de7b14a868625c31f4384780de3992d78b93345)
- CARD\_SDIO : [sd.h](sd_8h.md#aee707e2ff5691dbdefd9341a18de7b14a5afc0338b5a0541bb34f1a5b67139b6b)
- CARD\_SDMMC : [sd.h](sd_8h.md#aee707e2ff5691dbdefd9341a18de7b14a8b26749346e26d9257cd53c48a68eda4)
- CARD\_UNINITIALIZED : [sd.h](sd_8h.md#a52167aac735d93085a5eebc6f50e1bbaaa059e919850b36b85ebe33a07050e453)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_CHAR : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba79025ff0bd14a42a6112d3f57d19157e)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_COUNT : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba600828d5404b54bc435850441ebaaba0)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_DOUBLE : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba7e63e24f76257799793f15815ab5b47a)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_END : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba34275ebbde48f20f919cecf161785338)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_FLOAT : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba8fdb082bc438a3fe1d44de8f79ef0fdb)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_INT : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976baf97e06e7f012dfc5571c0f99f21cf581)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_LONG : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba74d7c7d173a7dbf75480a2fbb125a89e)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_LONG\_DOUBLE : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976baafa01b0585c800675ddb43e3e1a72fd4)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_LONG\_LONG : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba79adbef17165e0a196c389684a4ae78c)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_MAX : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976bab169302a191fb7535dcd8e1fce2d617e)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_PTR\_CHAR : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976baa77a46e2ec92bfb6f14ef0b1a88baafa)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_PTR\_VOID : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba90dec8ae7faa7fdf8f0e9f12aafa9fae)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_SHORT : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba14a44a3d8e799cb7547ce070328b76d8)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_UNSIGNED\_CHAR : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976bafd2b463b0646b4da744557634a0f4b90)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_UNSIGNED\_INT : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba329e514df49a5b39f19e3ec78e96dda7)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_UNSIGNED\_LONG : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976badaa8d77af2accfcf268c44488cc43ecf)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_UNSIGNED\_LONG\_LONG : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976babbd5e36a8966537880cbac87142b3f8f)
- CBPRINTF\_PACKAGE\_ARG\_TYPE\_UNSIGNED\_SHORT : [cbprintf\_enums.h](cbprintf__enums_8h.md#a7330fe0c9f113a6060326bf20c0d976ba4dff71a5cf651c0f945de53f9ba7be55)
- CELLULAR\_ACCESS\_TECHNOLOGY\_EDGE : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428eab205ca0387de08ea4b6f5612fcabbef4)
- CELLULAR\_ACCESS\_TECHNOLOGY\_GPRS : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428ea7c1911e14140b58340092891879d6048)
- CELLULAR\_ACCESS\_TECHNOLOGY\_GSM : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428ea9bcd1016388c265e1d20a7fcdfa37255)
- CELLULAR\_ACCESS\_TECHNOLOGY\_LTE : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428ea0e441c38a4166e9ff807f809cee48ebc)
- CELLULAR\_ACCESS\_TECHNOLOGY\_LTE\_CAT\_M1 : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428eaf2844e36d3bcaf8adb67e153ee8203dc)
- CELLULAR\_ACCESS\_TECHNOLOGY\_LTE\_CAT\_M2 : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428ea89be8003f89a2079275b8ed95a68d7e1)
- CELLULAR\_ACCESS\_TECHNOLOGY\_NB\_IOT : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428ea6f06e534f995b27f5856f57673890a3d)
- CELLULAR\_ACCESS\_TECHNOLOGY\_UMTS : [cellular.h](group__cellular__interface.md#gga168002533ce39996e68bda2c2e92428ea3edbbd5543a26bb12a28ac131e97da0f)
- CELLULAR\_MODEM\_INFO\_FW\_VERSION : [cellular.h](group__cellular__interface.md#ggad6e38e31d82075c51933fcbb2ff2de30acef002318e29733d68a9286fd133c027)
- CELLULAR\_MODEM\_INFO\_IMEI : [cellular.h](group__cellular__interface.md#ggad6e38e31d82075c51933fcbb2ff2de30aec77c2ed582a9e9002d0be26837864de)
- CELLULAR\_MODEM\_INFO\_MANUFACTURER : [cellular.h](group__cellular__interface.md#ggad6e38e31d82075c51933fcbb2ff2de30a57c4dde28d72170528954cd7cc21a0e1)
- CELLULAR\_MODEM\_INFO\_MODEL\_ID : [cellular.h](group__cellular__interface.md#ggad6e38e31d82075c51933fcbb2ff2de30a6fa8d55ae35e04e8f0d68a6d3cd002c8)
- CELLULAR\_MODEM\_INFO\_SIM\_ICCID : [cellular.h](group__cellular__interface.md#ggad6e38e31d82075c51933fcbb2ff2de30ac4969f42b98300317e2406916031d77d)
- CELLULAR\_MODEM\_INFO\_SIM\_IMSI : [cellular.h](group__cellular__interface.md#ggad6e38e31d82075c51933fcbb2ff2de30a06207052e9bcebcbd37d22aa2715d245)
- CELLULAR\_SIGNAL\_RSRP : [cellular.h](group__cellular__interface.md#gga746c0862b9a5da7c766e42e4d6025f47ae442515aa0176fd207864d8f673bff6a)
- CELLULAR\_SIGNAL\_RSRQ : [cellular.h](group__cellular__interface.md#gga746c0862b9a5da7c766e42e4d6025f47a2b4e39a72ac12182dd4386e72af62338)
- CELLULAR\_SIGNAL\_RSSI : [cellular.h](group__cellular__interface.md#gga746c0862b9a5da7c766e42e4d6025f47afa617b15b16f73ae0f9717b86ef8fa4a)
- CFB\_DISPLAY\_COLS : [cfb.h](group__monochrome__character__framebuffer.md#gga32e8edb517093dbc1b612a1bef24c7afac64b7d912d7f53ff111a64a96f8d977f)
- CFB\_DISPLAY\_HEIGH : [cfb.h](group__monochrome__character__framebuffer.md#gga32e8edb517093dbc1b612a1bef24c7afaab99f7b44bcfca4e49a71df82ad3b3e1)
- CFB\_DISPLAY\_PPT : [cfb.h](group__monochrome__character__framebuffer.md#gga32e8edb517093dbc1b612a1bef24c7afa3cc81a52aac17be5f1e3787c20ffe630)
- CFB\_DISPLAY\_ROWS : [cfb.h](group__monochrome__character__framebuffer.md#gga32e8edb517093dbc1b612a1bef24c7afa594c2dcc2987ff448e265a18e163d22c)
- CFB\_DISPLAY\_WIDTH : [cfb.h](group__monochrome__character__framebuffer.md#gga32e8edb517093dbc1b612a1bef24c7afae3709eb7028aa574528a7035f5f4f43a)
- CFB\_FONT\_MONO\_HPACKED : [cfb.h](group__monochrome__character__framebuffer.md#ggae98337479a5339d4171797e96313fee5a36d4664fb2460600d5dbe85a76ac974c)
- CFB\_FONT\_MONO\_VPACKED : [cfb.h](group__monochrome__character__framebuffer.md#ggae98337479a5339d4171797e96313fee5a5f679876161e14616d5342806578e3e6)
- CFB\_FONT\_MSB\_FIRST : [cfb.h](group__monochrome__character__framebuffer.md#ggae98337479a5339d4171797e96313fee5a837f2231088d93be083dda79095ac82b)
- CHARGER\_CHARGE\_TYPE\_ADAPTIVE : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803aa5a6d6cc9767fb0b19d13070c108ccc2)
- CHARGER\_CHARGE\_TYPE\_BYPASS : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803abe42aac55841886e2a69b94018918ee8)
- CHARGER\_CHARGE\_TYPE\_FAST : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803ae2b5fc2d034a037c9eee5afca2c5a711)
- CHARGER\_CHARGE\_TYPE\_LONGLIFE : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803acaa4a3c513188cd9dba71c98639bd31f)
- CHARGER\_CHARGE\_TYPE\_NONE : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803a71e7c6a73193c0ce1ba0467d93b72f17)
- CHARGER\_CHARGE\_TYPE\_STANDARD : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803a004c6c71a3a9943e151ed4fa49746ee6)
- CHARGER\_CHARGE\_TYPE\_TRICKLE : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803acc5367f61f10e6574ec01d090598cbf8)
- CHARGER\_CHARGE\_TYPE\_UNKNOWN : [charger.h](group__charger__interface.md#ggaee833a379a8674621d2fdf9b57d1f803aab6c7ea7d961c131bc91f91a9fa7cce4)
- CHARGER\_HEALTH\_CALIBRATION\_REQUIRED : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a1936cf89fd8e7286831a91dc218c25f1)
- CHARGER\_HEALTH\_COLD : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a24b2e80a03d4d06a267f3264edd64967)
- CHARGER\_HEALTH\_COOL : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412aad346d9b4b43998367facd491bc0ecd3)
- CHARGER\_HEALTH\_GOOD : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a7fe49d6d81fc76c70ab979eece42d538)
- CHARGER\_HEALTH\_HOT : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412aa3cd6b3e3e2ccfde03ba49912a2efcf1)
- CHARGER\_HEALTH\_NO\_BATTERY : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a50dabeb87f23ca712b5c78f0e5a4c60b)
- CHARGER\_HEALTH\_OVERHEAT : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412affd0237aed52d704e51f18a4d57f3b3b)
- CHARGER\_HEALTH\_OVERVOLTAGE : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412affbc931d777af7a03233d0dbed364459)
- CHARGER\_HEALTH\_SAFETY\_TIMER\_EXPIRE : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a17ccf9a3e7878c11e6a34bf5a4e38a82)
- CHARGER\_HEALTH\_UNKNOWN : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a21f2873586a920885d411e8dd02786ad)
- CHARGER\_HEALTH\_UNSPEC\_FAILURE : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a7651b0b32b8472caa8545278bef4e8fa)
- CHARGER\_HEALTH\_WARM : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412a206b491bf7e7efc60b9a41d69a2d305f)
- CHARGER\_HEALTH\_WATCHDOG\_TIMER\_EXPIRE : [charger.h](group__charger__interface.md#ggaab33241d3b85ab0770be9b1bd17e4412ab9c81803fd5a1dd6a843765304e592ce)
- CHARGER\_ONLINE\_FIXED : [charger.h](group__charger__interface.md#ggad95d2b1aaf18ac3a1c536f2d40317c19a119679acb9bcc173831003dfa309f5a6)
- CHARGER\_ONLINE\_OFFLINE : [charger.h](group__charger__interface.md#ggad95d2b1aaf18ac3a1c536f2d40317c19a50004df0b037325d33d21427a847a5b3)
- CHARGER\_ONLINE\_PROGRAMMABLE : [charger.h](group__charger__interface.md#ggad95d2b1aaf18ac3a1c536f2d40317c19a2b51eb24ac1047c99f8079beb261503e)
- CHARGER\_PROP\_CHARGE\_TERM\_CURRENT\_UA : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7ac60d2e9945e8f1eaf0e824b778a377fc)
- CHARGER\_PROP\_CHARGE\_TYPE : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7aff40a23cd65dcab5b3118fd9da3aaf95)
- CHARGER\_PROP\_COMMON\_COUNT : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a3c6d858ad83fa0aeca39ce33817f3732)
- CHARGER\_PROP\_CONSTANT\_CHARGE\_CURRENT\_UA : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a81a18d7286bfcf729402db6990ddc306)
- CHARGER\_PROP\_CONSTANT\_CHARGE\_VOLTAGE\_UV : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a5b4a6c4f1f6abb7a568c7c42dca696bf)
- CHARGER\_PROP\_CUSTOM\_BEGIN : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a279bd89ce909be3ea95be2fee33b08b3)
- CHARGER\_PROP\_HEALTH : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a2cc8bc744a98284e6c96a6ffb30ec654)
- CHARGER\_PROP\_INPUT\_CURRENT\_NOTIFICATION : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a70f2c71cd9d4e0f88ee36886094540fe)
- CHARGER\_PROP\_INPUT\_REGULATION\_CURRENT\_UA : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a703a0e374053a410ec154eac117f9085)
- CHARGER\_PROP\_INPUT\_REGULATION\_VOLTAGE\_UV : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a1e60d770a5d8e47118040ace3c6d8ec0)
- CHARGER\_PROP\_MAX : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a97342ebdadce27894e82dc57ed54724e)
- CHARGER\_PROP\_ONLINE : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a1c8906c0e4e278b84cab7d126cf95526)
- CHARGER\_PROP\_PRECHARGE\_CURRENT\_UA : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7aa8d97a1db907ccd40a7b5d917c0a9ab9)
- CHARGER\_PROP\_PRESENT : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a0dd5ee0d22cba6440c3f3583582d405b)
- CHARGER\_PROP\_STATUS : [charger.h](group__charger__interface.md#gga6eb3b4cc76e4f1e34732b7853eb860b7a73b9f45dd43347016a4dd6e15cd78cf6)
- CHARGER\_SEVERITY\_CRITICAL : [charger.h](group__charger__interface.md#gga2e7d7f15725db4d502bc3f46476a310da6bb0e1059a26d31380094530da94e3e8)
- CHARGER\_SEVERITY\_PEAK : [charger.h](group__charger__interface.md#gga2e7d7f15725db4d502bc3f46476a310da667f21cc72028772d09228424f75b40b)
- CHARGER\_SEVERITY\_WARNING : [charger.h](group__charger__interface.md#gga2e7d7f15725db4d502bc3f46476a310da347972f338fe70920f72c85dcdd1f885)
- CHARGER\_STATUS\_CHARGING : [charger.h](group__charger__interface.md#gga4a3c46bc0916082d15e665f7665c89d7ad95370e7cd6dc5d72e73d741b41cb8ad)
- CHARGER\_STATUS\_DISCHARGING : [charger.h](group__charger__interface.md#gga4a3c46bc0916082d15e665f7665c89d7ad06083516280a41fec5f8cc649ff499e)
- CHARGER\_STATUS\_FULL : [charger.h](group__charger__interface.md#gga4a3c46bc0916082d15e665f7665c89d7a2f550ea27e63b2eab78cc673d3e692cf)
- CHARGER\_STATUS\_NOT\_CHARGING : [charger.h](group__charger__interface.md#gga4a3c46bc0916082d15e665f7665c89d7a445d1979c2541ead57ddaa89dc57c658)
- CHARGER\_STATUS\_UNKNOWN : [charger.h](group__charger__interface.md#gga4a3c46bc0916082d15e665f7665c89d7ad474b06c524aea24b1ecb2e7d6621fa5)
- CHECK\_DATA\_ROLE\_SWAP\_TO\_DFP : [usbc.h](group____usbc__device__api.md#ggafea882f4f3cc96c502d53a24a3e5aec5afa602e00bf418656e365baa4d9ff6cef)
- CHECK\_DATA\_ROLE\_SWAP\_TO\_UFP : [usbc.h](group____usbc__device__api.md#ggafea882f4f3cc96c502d53a24a3e5aec5a7c97208a8a12f70e7ffa43bb406b9ebd)
- CHECK\_POWER\_ROLE\_SWAP : [usbc.h](group____usbc__device__api.md#ggafea882f4f3cc96c502d53a24a3e5aec5a1181a470497b797136cf0eb204394106)
- CHECK\_SNK\_AT\_DEFAULT\_LEVEL : [usbc.h](group____usbc__device__api.md#ggafea882f4f3cc96c502d53a24a3e5aec5a17f7f4fc9aa4178f0358769dedd29ade)
- CHECK\_SRC\_PS\_AT\_DEFAULT\_LEVEL : [usbc.h](group____usbc__device__api.md#ggafea882f4f3cc96c502d53a24a3e5aec5a42b660bb630edcca5ae8b031033d0718)
- CHECK\_VCONN\_CONTROL : [usbc.h](group____usbc__device__api.md#ggafea882f4f3cc96c502d53a24a3e5aec5a655e913c86db5caa961083dad9f6b7a1)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HCXTAL\_CLKGEN\_CLKOUT : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca93b3569c34d2a50baa0843f43495a4d3)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HCXTAL\_CLKGEN\_MISC : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8cabc4feb1ac062903f2289168573a6c3fc)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HCXTAL\_DBGCTRL : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca170229b6f0d44273a5a055a225f8c2e8)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HCXTAL\_IIS : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8cad5dcc388f72556a7334059ee75b772e9)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HCXTAL\_IOM : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca88af5c919f1e0e118b534734c5b43658)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HCXTAL\_PDM : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8cacfe43e2a43499e4c049e6a49492347c3)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HFXTAL\_ADC : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca11a81380c22880e5eefff8ae4e73336e)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HFXTAL\_AUADC : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca3383b78c966e6e98d39a784232e91208)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HFXTAL\_BLE : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca935745058b3bcd41fab102341573bd83)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_HFXTAL\_USB : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca68bdc3aa9a99d49e46e99bada885b727)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_LFXTAL : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8caccf3220195f88dfd12aaf7e556aa693f)
- CLOCK\_CONTROL\_AMBIQ\_TYPE\_MAX : [clock\_control\_ambiq.h](clock__control__ambiq_8h.md#abe05789f4191227f9cbc2e6755e13c8ca7e025623774e3d3b642eede1df96ce5b)
- CLOCK\_CONTROL\_NRF\_LF\_START\_AVAILABLE : [nrf\_clock\_control.h](nrf__clock__control_8h.md#aadc162ec2c250d17572546d74a08ee7da92be9b702c66df1a2bfd95560f1278df)
- CLOCK\_CONTROL\_NRF\_LF\_START\_NOWAIT : [nrf\_clock\_control.h](nrf__clock__control_8h.md#aadc162ec2c250d17572546d74a08ee7dab4eb3c0c8038403f218a0147df6cdbec)
- CLOCK\_CONTROL\_NRF\_LF\_START\_STABLE : [nrf\_clock\_control.h](nrf__clock__control_8h.md#aadc162ec2c250d17572546d74a08ee7da949ac21a6fe976280b5fcc967608a8f4)
- CLOCK\_CONTROL\_NRF\_TYPE\_COUNT : [nrf\_clock\_control.h](nrf__clock__control_8h.md#ab64ed97e8dc26da602e521309a300494a9ad0884bcc0d37d5f178c1a905f36ccc)
- CLOCK\_CONTROL\_NRF\_TYPE\_HFCLK : [nrf\_clock\_control.h](nrf__clock__control_8h.md#ab64ed97e8dc26da602e521309a300494ab72ac85df0cde71e7de9b96967eff37f)
- CLOCK\_CONTROL\_NRF\_TYPE\_LFCLK : [nrf\_clock\_control.h](nrf__clock__control_8h.md#ab64ed97e8dc26da602e521309a300494ad21d1fb9a5167a0b3374c1969ff6caf4)
- CLOCK\_CONTROL\_STATUS\_OFF : [clock\_control.h](group__clock__control__interface.md#ggad12829335f0c954ab6d586549db45e09a44a027c5e5bf19836aebc427098f0cfa)
- CLOCK\_CONTROL\_STATUS\_ON : [clock\_control.h](group__clock__control__interface.md#ggad12829335f0c954ab6d586549db45e09a232119a145ecc5d6a1ff0454a97c92db)
- CLOCK\_CONTROL\_STATUS\_STARTING : [clock\_control.h](group__clock__control__interface.md#ggad12829335f0c954ab6d586549db45e09aa1d03cc305aa2f510471e6f1ae1fbd52)
- CLOCK\_CONTROL\_STATUS\_UNKNOWN : [clock\_control.h](group__clock__control__interface.md#ggad12829335f0c954ab6d586549db45e09a4c939e7c8c38b5f2c50fe339a60c75cc)
- CMSDK\_AHB : [arm\_clock\_control.h](arm__clock__control_8h.md#af000c4220627db6eee0117062c6c50efa945c5ee4f308f798cc7d14c3471e0393)
- CMSDK\_APB : [arm\_clock\_control.h](arm__clock__control_8h.md#af000c4220627db6eee0117062c6c50efa58c832e59253102458c445fc49e02d80)
- COAP\_BLOCK\_1024 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922a6998c79e63cf65e7f86ddd5713d48dce)
- COAP\_BLOCK\_128 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922a147ddf4b0e5d1a8c11f0da2c71dee4d8)
- COAP\_BLOCK\_16 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922a834d479806b513818e2237f3f1c56968)
- COAP\_BLOCK\_256 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922acfc37f84eabccdde4bd84b06c6a5e753)
- COAP\_BLOCK\_32 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922a1aaf8f841c18e281b176793bb331993d)
- COAP\_BLOCK\_512 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922ad2052905aff08c58585dcf6c6caddc19)
- COAP\_BLOCK\_64 : [coap.h](group__coap.md#gga712c1468f936a3af7dc39a86a5961922a7266f448a391ea2a2763f1ded5397520)
- COAP\_CONTENT\_FORMAT\_APP\_CBOR : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a7ca73ff57a6c7fb1517b44f2ce17d3f9)
- COAP\_CONTENT\_FORMAT\_APP\_EXI : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a483a382550b38468cc66bdce9f4743ea)
- COAP\_CONTENT\_FORMAT\_APP\_JSON : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a975381d286c1e9b998e41ef0a234d17a)
- COAP\_CONTENT\_FORMAT\_APP\_JSON\_PATCH\_JSON : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a141f183724ad6da14c3992c0990d6239)
- COAP\_CONTENT\_FORMAT\_APP\_LINK\_FORMAT : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a1fbd90fd5cb309e2de6954f46174dc4f)
- COAP\_CONTENT\_FORMAT\_APP\_MERGE\_PATCH\_JSON : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a2797149fb3811d706dab291e9edc9436)
- COAP\_CONTENT\_FORMAT\_APP\_OCTET\_STREAM : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73a88d952174bb3e4ffb9ab11a599952760)
- COAP\_CONTENT\_FORMAT\_APP\_XML : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73adb96bf55e914f4852e92dc65752c372a)
- COAP\_CONTENT\_FORMAT\_TEXT\_PLAIN : [coap.h](group__coap.md#gga94a8f9956742d3928fc3c63b8d01ae73af068aa8d09032352799bc60868607997)
- COAP\_METHOD\_DELETE : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7adccbea1fe9a43433cf8471e32208a5ac)
- COAP\_METHOD\_FETCH : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7afa4070fed5c01b28bb1a59e3f0c021f4)
- COAP\_METHOD\_GET : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7a025300cb0dc4c4de8eb0b0e0b4eb5317)
- COAP\_METHOD\_IPATCH : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7a78f97b895f29819bf3f8b0314967f20e)
- COAP\_METHOD\_PATCH : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7adca55e3d2b4b41b249f6b2f67074d708)
- COAP\_METHOD\_POST : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7aba51bcab79bf75080ccf75c1ec38a3d6)
- COAP\_METHOD\_PUT : [coap.h](group__coap.md#gga6a6547e3c755cf7a5033302c8294e0b7a91637ef7c9f57cdcc65d0118008251db)
- COAP\_OPTION\_ACCEPT : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3afd0725f0ceb5ce22a6c7b390ca7efc9d)
- COAP\_OPTION\_BLOCK1 : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a8aaa54af114fd1db631566afa69f162d)
- COAP\_OPTION\_BLOCK2 : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a4aa7cdfa66bd89f21f592eaf3ebe0972)
- COAP\_OPTION\_CONTENT\_FORMAT : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3ac3166e67b5f5bf3cefee58c8ff58e5b8)
- COAP\_OPTION\_ECHO : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a620e8b59f67f89de8a38dc76c8fcc594)
- COAP\_OPTION\_ETAG : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a0efdc30ce5551daffd093b2a8466978a)
- COAP\_OPTION\_IF\_MATCH : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a4c61e26d11841c76debe2f99de5e9756)
- COAP\_OPTION\_IF\_NONE\_MATCH : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a07ea6f395818a7019bb9e6a6e34d2d74)
- COAP\_OPTION\_LOCATION\_PATH : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3ae82be3591d43f0d1c7e89ab764d969bd)
- COAP\_OPTION\_LOCATION\_QUERY : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3ac728800fc8f0d80e37dcf322e75eb27d)
- COAP\_OPTION\_MAX\_AGE : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3ab4cda4d3732fd12b9f203a2475c20981)
- COAP\_OPTION\_OBSERVE : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a06e91bbb4fa2144543d4148d3245ad25)
- COAP\_OPTION\_PROXY\_SCHEME : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a30da986503e1e15243b74a16b161901c)
- COAP\_OPTION\_PROXY\_URI : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3ae4d2c93b545708926813217cd36a96ac)
- COAP\_OPTION\_REQUEST\_TAG : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a2a47428ec35972d256da05104ea6396f)
- COAP\_OPTION\_SIZE1 : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a53169a1c7b07c9e97f79dfc06af3eb51)
- COAP\_OPTION\_SIZE2 : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a26c1bcd7af4fccd949e3de35fc2d88e6)
- COAP\_OPTION\_URI\_HOST : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a402bb0a642a07d951c35d69736fd3f33)
- COAP\_OPTION\_URI\_PATH : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a96b5a15937e875b3087307cc5faab1af)
- COAP\_OPTION\_URI\_PORT : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3a344707b9f4cb71310f2ccf5e8050d17a)
- COAP\_OPTION\_URI\_QUERY : [coap.h](group__coap.md#gga7b8b3041e2f4ae26e663ff7431a6e6e3adb4d27052247b9a79ad7fcc0cc30c71c)
- COAP\_RESPONSE\_CODE\_BAD\_GATEWAY : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a8de29a7ee6bb960a97d6b415217b4640)
- COAP\_RESPONSE\_CODE\_BAD\_OPTION : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a989a6528edc653c0b693ed875481e82d)
- COAP\_RESPONSE\_CODE\_BAD\_REQUEST : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a603e60d2314bde36adf505f446c907c5)
- COAP\_RESPONSE\_CODE\_CHANGED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a3ffb3632c37c22cee901760753c8d0d3)
- COAP\_RESPONSE\_CODE\_CONFLICT : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26ab447505d233aed9fd8ad28070d317544)
- COAP\_RESPONSE\_CODE\_CONTENT : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26adfd3e5e3c6ad5715127bb444c205fbce)
- COAP\_RESPONSE\_CODE\_CONTINUE : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26ae4e3ff451c626421b9b329790f019dd8)
- COAP\_RESPONSE\_CODE\_CREATED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26ad2d9fe8dd5beda74b522377c0b76275b)
- COAP\_RESPONSE\_CODE\_DELETED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26abf324915aa498c64a733a0098de4a082)
- COAP\_RESPONSE\_CODE\_FORBIDDEN : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26afeee555ef54f138db58b14ad2c328d04)
- COAP\_RESPONSE\_CODE\_GATEWAY\_TIMEOUT : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26af6d379fef704c269406b782c60772ecd)
- COAP\_RESPONSE\_CODE\_INCOMPLETE : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a671730c6d2f1a339fcd557c5452150af)
- COAP\_RESPONSE\_CODE\_INTERNAL\_ERROR : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a07b00dba944e55c4dcde798da667b499)
- COAP\_RESPONSE\_CODE\_NOT\_ACCEPTABLE : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a4d77322514521e8dfea01f4a1a6e5886)
- COAP\_RESPONSE\_CODE\_NOT\_ALLOWED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a301eb722445472dba93d5accd6e0dd31)
- COAP\_RESPONSE\_CODE\_NOT\_FOUND : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a86c2bff8add69428d164431b3091a8e9)
- COAP\_RESPONSE\_CODE\_NOT\_IMPLEMENTED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a85c04541bc8580c2ae915946fd677c15)
- COAP\_RESPONSE\_CODE\_OK : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a0629da1898b934c3f699b98ff808c717)
- COAP\_RESPONSE\_CODE\_PRECONDITION\_FAILED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a289ade02833b57bffd915e648e050e52)
- COAP\_RESPONSE\_CODE\_PROXYING\_NOT\_SUPPORTED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a5f49a566d37b2cda0c624d76aee08bd1)
- COAP\_RESPONSE\_CODE\_REQUEST\_TOO\_LARGE : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26aaa43062a8146c1e2e09183228a540d2e)
- COAP\_RESPONSE\_CODE\_SERVICE\_UNAVAILABLE : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26afebd274586351951ffe9c8f26b270dec)
- COAP\_RESPONSE\_CODE\_TOO\_MANY\_REQUESTS : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26aabd72cff6669d382aa04c53e764d0b49)
- COAP\_RESPONSE\_CODE\_UNAUTHORIZED : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26acb76dbf11b47477144cc4ece3357283c)
- COAP\_RESPONSE\_CODE\_UNPROCESSABLE\_ENTITY : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26a5e5e31cc4647d5e0fdd1c8fe6cfa2661)
- COAP\_RESPONSE\_CODE\_UNSUPPORTED\_CONTENT\_FORMAT : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26aef6b165b9d3f8f4b477431058815c16b)
- COAP\_RESPONSE\_CODE\_VALID : [coap.h](group__coap.md#gga1ea81a365834e96f43ab7be573069d26aecaac4a0e9c821dfc20536951409dd48)
- COAP\_TYPE\_ACK : [coap.h](group__coap.md#gga3b375b7580246d1266293d09902f3d9fa7b2fe2187018bce9132af2763b57307d)
- COAP\_TYPE\_CON : [coap.h](group__coap.md#gga3b375b7580246d1266293d09902f3d9fa65c04ee4847d0c595238079ac9564e8d)
- COAP\_TYPE\_NON\_CON : [coap.h](group__coap.md#gga3b375b7580246d1266293d09902f3d9fa629a304bea0c85c7b2bf746b26216a4f)
- COAP\_TYPE\_RESET : [coap.h](group__coap.md#gga3b375b7580246d1266293d09902f3d9fa287b951159fd51b84a2e0491b012f84c)
- CONN\_MGR\_IF\_NO\_AUTO\_CONNECT : [conn\_mgr\_connectivity.h](group__conn__mgr__connectivity.md#ggaf10fb532a3dd07ec8c692a72643d0e3fadaf5c01734a04f70f3caf5c841c936dd)
- CONN\_MGR\_IF\_NO\_AUTO\_DOWN : [conn\_mgr\_connectivity.h](group__conn__mgr__connectivity.md#ggaf10fb532a3dd07ec8c692a72643d0e3fa2b65e55f411eef6b9805c9977097f86d)
- CONN\_MGR\_IF\_PERSISTENT : [conn\_mgr\_connectivity.h](group__conn__mgr__connectivity.md#ggaf10fb532a3dd07ec8c692a72643d0e3fa0edb461193b3486d06f75fd1da93746f)
- COREDUMP\_CMD\_CLEAR\_ERROR : [coredump.h](group__coredump__apis.md#gga48765a88d430aaec373a2ce6e4796578aef8cf1d85b2dfb2c911cb2abb7e3b38f)
- COREDUMP\_CMD\_COPY\_STORED\_DUMP : [coredump.h](group__coredump__apis.md#gga48765a88d430aaec373a2ce6e4796578a0cc9387829efa1f3c6f802217adc3819)
- COREDUMP\_CMD\_ERASE\_STORED\_DUMP : [coredump.h](group__coredump__apis.md#gga48765a88d430aaec373a2ce6e4796578ab46f9f907e75e1187a6b7a2efd7e54f6)
- COREDUMP\_CMD\_INVALIDATE\_STORED\_DUMP : [coredump.h](group__coredump__apis.md#gga48765a88d430aaec373a2ce6e4796578aa45b8520053c56075a29441c27e4e321)
- COREDUMP\_CMD\_MAX : [coredump.h](group__coredump__apis.md#gga48765a88d430aaec373a2ce6e4796578a1b35195ff848aa9803bdcb4136e386c6)
- COREDUMP\_CMD\_VERIFY\_STORED\_DUMP : [coredump.h](group__coredump__apis.md#gga48765a88d430aaec373a2ce6e4796578ab8f6dd3e8062175c9790bfe5d2b2aeaa)
- COREDUMP\_QUERY\_GET\_ERROR : [coredump.h](group__coredump__apis.md#gga26360cadb6b43f5c86b59332e66008f5afa7363b57e57c55fffa8cc9e9050d6cb)
- COREDUMP\_QUERY\_GET\_STORED\_DUMP\_SIZE : [coredump.h](group__coredump__apis.md#gga26360cadb6b43f5c86b59332e66008f5ac3e34206cd358efdc1ed7a2996b98483)
- COREDUMP\_QUERY\_HAS\_STORED\_DUMP : [coredump.h](group__coredump__apis.md#gga26360cadb6b43f5c86b59332e66008f5a89f3cc157e790b8aa324d76a01b73e83)
- COREDUMP\_QUERY\_MAX : [coredump.h](group__coredump__apis.md#gga26360cadb6b43f5c86b59332e66008f5ae4a1cdeb5c337eae17d59a1d1f1d1e2d)
- CR\_4\_5 : [lora.h](group__lora__api.md#gga5af378491814d0d3a059cd6cd39265c8a43f3ee8c5a099f26a2b1e74ab80b5d18)
- CR\_4\_6 : [lora.h](group__lora__api.md#gga5af378491814d0d3a059cd6cd39265c8a63e7039c12c59913fe195a9cda8e842e)
- CR\_4\_7 : [lora.h](group__lora__api.md#gga5af378491814d0d3a059cd6cd39265c8afaec525569c1f205b98228986604a943)
- CR\_4\_8 : [lora.h](group__lora__api.md#gga5af378491814d0d3a059cd6cd39265c8ad79275b6ea8d47cac828b698617afe42)
- CRC16 : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda27369d6d16d5fdf2a44111924c019e11)
- CRC16\_ANSI : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda4a5e69eba1f74c0bd028356c9fb0f1f6)
- CRC16\_CCITT : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527eddacdf0c4de024efc53edd374ad22c6da30)
- CRC16\_ITU\_T : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda3fdbd9451fc39959f46714a2f46ca42c)
- CRC32\_C : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda4036b6c556c8aa1307c1ff7ff1626148)
- CRC32\_IEEE : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527eddaecf71323e57da8d4f7e45d154b1059d8)
- CRC4 : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527eddaef5caa552f890f4c7e887dfe1a06bc22)
- CRC4\_TI : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda3a8effe9651199c20669daf033bbe59f)
- CRC7\_BE : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda218e7d92cae035c594e267fb0ed0ae6a)
- CRC8 : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527edda852cb403a2665ed279b28679f11567d8)
- CRC8\_CCITT : [crc.h](group__crc.md#ggabc40e4ffd6da1175eb8ee8573a527eddae00c2275c0a5ac47b64c221feadfc3eb)
- CRYPTO\_CIPHER\_ALGO\_AES : [cipher.h](group__crypto__cipher.md#ggaa43d9907b508cb28c649aaa524d84424aed0c05202ecbb1496f84ec6c383ddcf0)
- CRYPTO\_CIPHER\_MODE\_CBC : [cipher.h](group__crypto__cipher.md#ggaeedaf8017f8d6518f7dedef365bbae43a98034da3b89ae5c47749c59a3b15bbfd)
- CRYPTO\_CIPHER\_MODE\_CCM : [cipher.h](group__crypto__cipher.md#ggaeedaf8017f8d6518f7dedef365bbae43a5116e1683b8c9c26582863a65128ce3b)
- CRYPTO\_CIPHER\_MODE\_CTR : [cipher.h](group__crypto__cipher.md#ggaeedaf8017f8d6518f7dedef365bbae43a58823b401487d57d62a067d71bd2e9d2)
- CRYPTO\_CIPHER\_MODE\_ECB : [cipher.h](group__crypto__cipher.md#ggaeedaf8017f8d6518f7dedef365bbae43a30ffc1c7c1489f938ed8c567a4fb885e)
- CRYPTO\_CIPHER\_MODE\_GCM : [cipher.h](group__crypto__cipher.md#ggaeedaf8017f8d6518f7dedef365bbae43a2f0de7c8f0b9c1a8ac7343ca3ca72c12)
- CRYPTO\_CIPHER\_OP\_DECRYPT : [cipher.h](group__crypto__cipher.md#gga1db3a5604bff0669672af4457aaaee21a1e1205f695285034b4889ac19a191617)
- CRYPTO\_CIPHER\_OP\_ENCRYPT : [cipher.h](group__crypto__cipher.md#gga1db3a5604bff0669672af4457aaaee21a71bf6ee186bab1729e24e37c119d0019)
- CRYPTO\_HASH\_ALGO\_SHA224 : [hash.h](group__crypto__hash.md#ggaaea88501aa8243eacc8c57ac0914ac7aaa49fd348b98d55eca407ae88e3626265)
- CRYPTO\_HASH\_ALGO\_SHA256 : [hash.h](group__crypto__hash.md#ggaaea88501aa8243eacc8c57ac0914ac7aa1b0b60a3270618fd492491668dc2ad43)
- CRYPTO\_HASH\_ALGO\_SHA384 : [hash.h](group__crypto__hash.md#ggaaea88501aa8243eacc8c57ac0914ac7aabba9e518a333ce75825957fde1993dd5)
- CRYPTO\_HASH\_ALGO\_SHA512 : [hash.h](group__crypto__hash.md#ggaaea88501aa8243eacc8c57ac0914ac7aa72a129765ae9e15f456c295c3917bf3f)

- Generated on  for Zephyr API Documentation by [![doxygen](https://docs.zephyrproject.org/3.6.0/doxygen/html/doxygen.svg)](https://www.doxygen.org/index.html) 1.16.1
